@@ -1,3 +1,12 @@
+2023-05-17  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pkl-gen.pks (struct_constructor): Make sure the
+	destination type of a cast to an array has a bounder.
+	* libpoke/pkl-gen.c (pkl_gen_pr_type_array): Make sure the array
+	type has a bounder in PKL_GEN_CTX_IN_TYPE context.
+	* testsuite/poke.pkl/scons-72.pk: New test.
+	* testsuite/Makefile.am (EXTRA_DIST): Add new test.
+
 2023-05-16  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* pickles/pe.pk (PE_Name): //BASE64 is worse than I thought.
